Added configuration to build a fat jar

--- a/kcrud-server/src/main/resources/application.conf
+++ b/kcrud-server/src/main/resources/application.conf
@@ -6,6 +6,8 @@
 # https://ktor.io/docs/configuration-file.html
 # https://ktor.io/docs/configuration-file.html#predefined-properties
 
+include "config_application.conf"
+
 ktor {
 
 	# Application modules. Usually, it is a fully qualified name of the main class.
