Added more example links to the fat jar explanation Reorganized configuration files in base module

--- a/kcrud-server/src/main/resources/application.conf
+++ b/kcrud-server/src/main/resources/application.conf
@@ -6,7 +6,7 @@
 # https://ktor.io/docs/configuration-file.html
 # https://ktor.io/docs/configuration-file.html#predefined-properties
 
-include "config_application.conf"
+include "config/config_application.conf"
 
 ktor {
 
