Changed environment to DEV

--- a/kcrud-base/src/main/resources/config/config_runtime.conf
+++ b/kcrud-base/src/main/resources/config/config_runtime.conf
@@ -11,7 +11,7 @@ runtime {
 	# The environment type the application is running on.
 	# Not to confuse with the 'development' mode flag.
 	# Choices: DEV, TEST, STATING, PROD.
-	environment: "PROD"
+	environment: "DEV"
 	environment: ${?KCRUD_RUNTIME_ENVIRONMENT}
 
 	# DoubleReceive is a feature that allows to receive the same request more than once.
