Added docker containerization

--- a/kcrud-base/src/main/resources/config/config_application.conf
+++ b/kcrud-base/src/main/resources/config/config_application.conf
@@ -26,7 +26,7 @@ ktor {
 		sslPort: 8443
 		sslPort: ${?KCRUD_DEPLOYMENT_SSL_PORT}
 
-		host: "127.0.0.1"
+		host: "localhost"
 		host: ${?KCRUD_DEPLOYMENT_HOST}
 
 		// The watch paths are directories Ktor will monitor for changes.
