Updated docker file to include a build stage

--- a/kcrud-base/src/main/resources/config/config_database.conf
+++ b/kcrud-base/src/main/resources/config/config_database.conf
@@ -6,8 +6,7 @@ database {
 	username: null
 	password: null
 
-	# The database connection pool size to be used.
-	# 0 for no connection pooling.
+	# The database connection pool size to be used. 0 for no connection pooling.
 	connectionPoolSize: 100
 	connectionPoolSize: ${?KCRUD_DATABASE_CONNECTION_POOL_SIZE}
 
@@ -57,21 +56,21 @@ database {
 	# changes must be handled manually.
 	useMigrations: true
 
-	// The database name.
+	# The database file name.
 	name: "dbv1"
 	name: ${?KCRUD_DATABASE_NAME}
 
-	// The database path when using PERSISTENT mode.
+	# The database location path.
 	path: ${runtime.workingDir}"/database/"
 	path: ${?KCRUD_DATABASE_PATH}
 
-	// The database JDBC URL.
-	// In memory: "jdbc:h2:mem:regular;DB_CLOSE_DELAY=-1;"
-	// Persisent: "jdbc:h2:file:"${database.path}${database.name}
+	# The database JDBC URL.
+	# In memory: "jdbc:h2:mem:regular;DB_CLOSE_DELAY=-1;"
+	# Persisent: "jdbc:h2:file:"${database.path}${database.name}
 	jdbcUrl: "jdbc:h2:file:"${database.path}${database.name}
 	jdbcUrl: ${?KCRUD_DATABASE_JDBC_URL}
 
-	// The database JDBC driver.
+	# The database JDBC driver.
 	jdbcDriver: "org.h2.Driver"
 	jdbcDriver: ${?KCRUD_DATABASE_JDBC_DRIVER}
 }
