--- a/kcrud-base/src/main/resources/config/config_runtime.conf
+++ b/kcrud-base/src/main/resources/config/config_runtime.conf
@@ -4,7 +4,7 @@
 
 runtime {
 	# Unique machine identifier.
-	# Used to generate unique IDs for calls traceability.
+	# Used to generate unique snowflake IDs for calls traceability.
 	machineId: 1
 	machineId: ${?KCRUD_RUNTIME_MACHINE_ID}
 
@@ -20,6 +20,6 @@ runtime {
 	doubleReceive: true
 	doubleReceive: ${?KCRUD_RUNTIME_DOUBLE_RECEIVE}
 
-	// Temporary project folder where to output runtime files such as the database, etc.
+	# Temporary project folder where to output runtime files such as the database, etc.
 	workingDir: "./.runtime"
 }
