--- a/kcrud-base/src/main/resources/config/config_application.conf
+++ b/kcrud-base/src/main/resources/config/config_application.conf
@@ -9,6 +9,7 @@
 include "config_runtime.conf"
 include "config_database.conf"
 include "config_security.conf"
+include "config_ssl.conf"
 include "config_cors.conf"
 include "config_docs.conf"
 
@@ -17,39 +18,39 @@ ktor {
 	# This make Ktor to enables features like auto-reload, better tracing, etc.,
 	# See: https://ktor.io/docs/development-mode.html
 	development: true
-	development: ${?KCRUD_DEVELOPMENT}
+	development: ${?KCRUD_KTOR_DEVELOPMENT}
 
 	deployment {
 		port: 8080
-		port: ${?KCRUD_DEPLOYMENT_PORT}
+		port: ${?KCRUD_KTOR_DEPLOYMENT_PORT}
 
 		sslPort: 8443
-		sslPort: ${?KCRUD_DEPLOYMENT_SSL_PORT}
+		sslPort: ${?KCRUD_KTOR_DEPLOYMENT_SSL_PORT}
 
 		host: "localhost"
-		host: ${?KCRUD_DEPLOYMENT_HOST}
+		host: ${?KCRUD_KTOR_DEPLOYMENT_HOST}
 
-		// The watch paths are directories Ktor will monitor for changes.
-		// Useful when development mode is enabled, to automatically
-		// reload classes/resources when modified.
+		# The watch paths are directories Ktor will monitor for changes.
+		# Useful when development mode is enabled, to automatically
+		# reload classes/resources when modified.
 		watch: [classes, resources]
 
-		// https://ktor.io/docs/configuration-file.html#predefined-properties
-		connectionGroupSize = 8 // Count of threads used to accept new connections and start call processing.
-		workerGroupSize = 16 // Event group size for processing connections, parsing messages, and internal engine operations.
-		callGroupSize = 32 // Minimum size of a thread pool used to process application calls.
+		# https://ktor.io/docs/configuration-file.html#predefined-properties
+		connectionGroupSize = 8 # Count of threads used to accept new connections and start call processing.
+		workerGroupSize = 16 # Event group size for processing connections, parsing messages, and internal engine operations.
+		callGroupSize = 32 # Minimum size of a thread pool used to process application calls.
 
-		// Shutdown timeout and grace period. Should be in the range of 2 to 30 seconds.
-		// DEfaults are set to 0 for faster shutdowns in development mode.
-		shutdownGracePeriod = 0 // Maximum time for a server to stop accepting new requests, (ms).
-		shutdownGracePeriod = ${?KCRUD_DEPLOYMENT_SHUTDOWN_GRACE_PERIOD}
-		shutdownTimeout = 0 // Maximum time to wait until the server stops completely. Must be >= shutdownGracePeriod, (ms).
-		shutdownTimeout = ${?KCRUD_DEPLOYMENT_SHUTDOWN_TIMEOUT}
+		# Shutdown timeout and grace period. Should be in the range of 2 to 30 seconds.
+		# Defaults are set to 0 for a faster shutdown / restart in development mode.
+		shutdownGracePeriod = 0 # Maximum time for a server to stop accepting new requests, (ms).
+		shutdownGracePeriod = ${?KCRUD_KTOR_DEPLOYMENT_SHUTDOWN_GRACE_PERIOD}
+		shutdownTimeout = 0 # Maximum time to wait until the server stops completely. Must be >= shutdownGracePeriod, (ms).
+		shutdownTimeout = ${?KCRUD_KTOR_DEPLOYMENT_SHUTDOWN_TIMEOUT}
 
-		// Netty HTTP server configuration.
-		// https://camel.apache.org/components/4.4.x/netty-http-component.html
-		maxInitialLineLength = 4096 // Max length for the initial request line (method, URI, and version), (bytes).
-		maxHeaderSize = 8192 // Max total size of all HTTP headers in a request, (bytes).
-		maxChunkSize = 8192 // Maximum size of HTTP content chunks; larger content is split, (bytes).
+		# Netty HTTP server configuration.
+		# https://camel.apache.org/components/4.4.x/netty-http-component.html
+		maxInitialLineLength = 4096 # Max length for the initial request line (method, URI, and version), (bytes).
+		maxHeaderSize = 8192 # Max total size of all HTTP headers in a request, (bytes).
+		maxChunkSize = 8192 # Maximum size of HTTP content chunks; larger content is split, (bytes).
 	}
 }
