Default the .env shutdown grace period to 0

--- a/.env
+++ b/.env
@@ -14,12 +14,13 @@ KCRUD_KTOR_DEPLOYMENT_HOST="0.0.0.0"
 
 #-------------------------------------------------------------------------------------------------
 # Netty Server:
+# Shutdown timeout and grace period. Should be in the range of 2 to 30 seconds.
 # Set next settings to 0 for a faster shutdown / restart in development mode.
 
 # Maximum time for a server to stop accepting new requests, (ms).
-KCRUD_KTOR_DEPLOYMENT_SHUTDOWN_GRACE_PERIOD=1000
+KCRUD_KTOR_DEPLOYMENT_SHUTDOWN_GRACE_PERIOD=0
 #  Maximum time to wait until the server stops completely. Must be >= shutdownGracePeriod, (ms).
-KCRUD_KTOR_DEPLOYMENT_SHUTDOWN_TIMEOUT=2000
+KCRUD_KTOR_DEPLOYMENT_SHUTDOWN_TIMEOUT=0
 
 #-------------------------------------------------------------------------------------------------
 # Runtime:
