--- a/kcrud-server/src/main/resources/openapi/documentation.yaml
+++ b/kcrud-server/src/main/resources/openapi/documentation.yaml
@@ -891,7 +891,7 @@ components:
           type: "array"
           items:
             type: "string"
-        docsEnabled:
+        apiSchemaEnabled:
           type: "boolean"
       required:
         - "errors"
