--- a/.env
+++ b/.env
@@ -186,10 +186,10 @@ KCRUD_SECURITY_CONSTRAINTS_NEW_TOKEN_LIMIT=1000
 KCRUD_SECURITY_CONSTRAINTS_NEW_TOKEN_REFILL_MS=10000
 
 #-------------------------------------------------------------------------------------------------
-# Docs:
-# The list of environments under which the documentation is enabled.
-# If the environment is not in the list, the documentation will not be available.
-# Empty list means 'no' documentation is available in any of the environments.
+# API SCHEMA:
+# The list of environments under which the API schema is enabled.
+# If the environment is not in the list, the API schema will not be available.
+# Empty list means 'no' API schema is available in any of the environments.
 # Tha list can be either a single string with comma delimited values, or a list of strings.
 # Choices: DEV, TEST, STATING, PROD.
-KCRUD_DOCS_ENVIRONMENTS="DEV,TEST"
+KCRUD_API_SCHEMA_ENVIRONMENTS="DEV,TEST"
