--- a/kcrud-base/src/main/resources/config/config_application.conf
+++ b/kcrud-base/src/main/resources/config/config_application.conf
@@ -11,7 +11,7 @@ include "config_database.conf"
 include "config_security.conf"
 include "config_ssl.conf"
 include "config_cors.conf"
-include "config_docs.conf"
+include "config_api_schema.conf"
 
 ktor {
 	# Set to 'true' to enable development mode.
