Added OAuth authentication

--- a/kcrud-base/src/main/resources/config/config_security.conf
+++ b/kcrud-base/src/main/resources/config/config_security.conf
@@ -47,6 +47,35 @@ security {
 		realm: ${?KCRUD_SECURITY_BASIC_AUTH_REALM}
 	}
 
+	oauth {
+		providerName = "auth0"
+		providerName = ${?KCRUD_SECURITY_OAUTH_PROVIDER_NAME}
+
+		# Redirect URL that is opened when authorization is completed.
+		redirectCallbackUrl = "http://localhost:8080/callback"
+		redirectCallbackUrl = ${?KCRUD_SECURITY_OAUTH_REDIRECT_CALLBACK_URL}
+
+		# OAuth server authorization page URL.
+		authorizeUrl = "https://TARGET_AUTH0_DOMAIN/authorize"
+		authorizeUrl = ${?KCRUD_SECURITY_OAUTH_AUTHORIZE_URL}
+
+		# OAuth server access token request domain URL.
+		accessTokenUrl = "https://TARGET_AUTH0_DOMAIN/oauth/token"
+		accessTokenUrl = ${?KCRUD_SECURITY_OAUTH_ACCESS_TOKEN_URL}
+
+		# Client id parameter (provided by OAuth server vendor).
+		clientId = "TARGET_AUTH0_CLIENT_ID"
+		clientId = ${?KCRUD_SECURITY_OAUTH_CLIENT_ID}
+
+		# Client secret parameter (provided by OAuth server vendor).
+		clientSecret = "TARGET_AUTH0_CLIENT_SECRET"
+		clientSecret = ${?KCRUD_SECURITY_OAUTH_CLIENT_SECRET}
+
+		# List of OAuth scopes used by default.
+		defaultScopes = ["openid", "profile", "email"]
+		defaultScopes = ${?KCRUD_SECURITY_OAUTH_DEFAULT_SCOPES}
+	}
+
 	# WARNING: The encryption settings below are critical for data privacy and integrity.
 	# Changing any of these values post-encryption will result in the inability to decrypt previously encrypted data.
 	# It is imperative to establish these values PRIOR to any data input and maintain them consistently to ensure data accessibility.
