--- a/.env
+++ b/.env
@@ -143,6 +143,28 @@ KCRUD_SECURITY_BASIC_AUTH_PROVIDER_NAME="kcrud-basic-auth"
 KCRUD_SECURITY_BASIC_AUTH_REALM="kcrud"
 
 #-------------------------------------------------------------------------------------------------
+# OAuth:
+KCRUD_SECURITY_OAUTH_PROVIDER_NAME="auth0"
+
+# Redirect URL that is opened when authorization is completed.
+KCRUD_SECURITY_OAUTH_REDIRECT_CALLBACK_URL="http://localhost:8080/callback"
+
+# OAuth server authorization page URL.
+KCRUD_SECURITY_OAUTH_AUTHORIZE_URL="https://TARGET_OAUTH_DOMAIN/authorize"
+
+# OAuth server access token request domain URL.
+KCRUD_SECURITY_OAUTH_ACCESS_TOKEN_URL="https://TARGET_OAUTH_DOMAIN/oauth/token"
+
+# Client id parameter (provided by OAuth server vendor).
+KCRUD_SECURITY_OAUTH_CLIENT_ID="TARGET_OAUTH_CLIENT_ID"
+
+# Client secret parameter (provided by OAuth server vendor).
+KCRUD_SECURITY_OAUTH_CLIENT_SECRET="TARGET_OAUTH_CLIENT_SECRET"
+
+# List of OAuth scopes used by default.
+KCRUD_SECURITY_OAUTH_DEFAULT_SCOPES="openid,profile,email"
+
+#-------------------------------------------------------------------------------------------------
 # Encryption:
 # WARNING: The encryption settings below are critical for data privacy and integrity.
 # Changing any of these values post-encryption will result in the inability to decrypt previously encrypted data.
