Updated oauth settings documentation

--- a/.env
+++ b/.env
@@ -146,22 +146,22 @@ KCRUD_SECURITY_BASIC_AUTH_REALM="kcrud"
 # OAuth:
 KCRUD_SECURITY_OAUTH_PROVIDER_NAME="auth0"
 
-# Redirect URL that is opened when authorization is completed.
-KCRUD_SECURITY_OAUTH_REDIRECT_CALLBACK_URL="http://localhost:8080/callback"
+# Redirect URL opened when authorization is completed. Must be registered in the OAuth provider.
+KCRUD_SECURITY_OAUTH_REDIRECT_CALLBACK_URL="http://localhost:8080/oauth/callback"
 
-# OAuth server authorization page URL.
+# OAuth server authorization page URL. Provided by OAuth server vendor.
 KCRUD_SECURITY_OAUTH_AUTHORIZE_URL="https://TARGET_OAUTH_DOMAIN/authorize"
 
-# OAuth server access token request domain URL.
+# OAuth server access token request domain URL. Provided by OAuth server vendor.
 KCRUD_SECURITY_OAUTH_ACCESS_TOKEN_URL="https://TARGET_OAUTH_DOMAIN/oauth/token"
 
-# Client id parameter (provided by OAuth server vendor).
+# Client id parameter. Provided by OAuth server vendor.
 KCRUD_SECURITY_OAUTH_CLIENT_ID="TARGET_OAUTH_CLIENT_ID"
 
-# Client secret parameter (provided by OAuth server vendor).
+# Client secret parameter. Provided by OAuth server vendor.
 KCRUD_SECURITY_OAUTH_CLIENT_SECRET="TARGET_OAUTH_CLIENT_SECRET"
 
-# List of OAuth scopes used by default.
+# List of OAuth scopes used by default. Provided by OAuth server vendor.
 KCRUD_SECURITY_OAUTH_DEFAULT_SCOPES="openid,profile,email"
 
 #-------------------------------------------------------------------------------------------------
