--- a/kcrud-base/src/main/resources/config/config_security.conf
+++ b/kcrud-base/src/main/resources/config/config_security.conf
@@ -51,27 +51,27 @@ security {
 		providerName = "auth0"
 		providerName = ${?KCRUD_SECURITY_OAUTH_PROVIDER_NAME}
 
-		# Redirect URL that is opened when authorization is completed.
-		redirectCallbackUrl = "http://localhost:8080/callback"
+		# Redirect URL opened when authorization is completed. Must be registered in the OAuth provider.
+		redirectCallbackUrl = "http://localhost:8080/oauth/callback"
 		redirectCallbackUrl = ${?KCRUD_SECURITY_OAUTH_REDIRECT_CALLBACK_URL}
 
-		# OAuth server authorization page URL.
+		# OAuth server authorization page URL. Provided by OAuth server vendor.
 		authorizeUrl = "https://TARGET_AUTH0_DOMAIN/authorize"
 		authorizeUrl = ${?KCRUD_SECURITY_OAUTH_AUTHORIZE_URL}
 
-		# OAuth server access token request domain URL.
+		# OAuth server access token request domain URL. Provided by OAuth server vendor.
 		accessTokenUrl = "https://TARGET_AUTH0_DOMAIN/oauth/token"
 		accessTokenUrl = ${?KCRUD_SECURITY_OAUTH_ACCESS_TOKEN_URL}
 
-		# Client id parameter (provided by OAuth server vendor).
+		# Client id parameter. Provided by OAuth server vendor.
 		clientId = "TARGET_AUTH0_CLIENT_ID"
 		clientId = ${?KCRUD_SECURITY_OAUTH_CLIENT_ID}
 
-		# Client secret parameter (provided by OAuth server vendor).
+		# Client secret parameter. Provided by OAuth server vendor.
 		clientSecret = "TARGET_AUTH0_CLIENT_SECRET"
 		clientSecret = ${?KCRUD_SECURITY_OAUTH_CLIENT_SECRET}
 
-		# List of OAuth scopes used by default.
+		# List of OAuth scopes used by default. Provided by OAuth server vendor.
 		defaultScopes = ["openid", "profile", "email"]
 		defaultScopes = ${?KCRUD_SECURITY_OAUTH_DEFAULT_SCOPES}
 	}
