Added Xdebug flag compiler option

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,5 @@
 kotlin.code.style=official
+# Set to 'true' to enable Kotlin compiler option '-Xdebug' to disable optimizations
+# that may affect the debugging experience.
+# WARNING: Never set to 'true' in production as it can cause memory leaks.
+disableOptimizations=false
