Updated configs to use a semicolon as arrays value delimiter Fixed relative database path in env variables

--- a/kcrud-base/src/main/resources/config/config_api_schema.conf
+++ b/kcrud-base/src/main/resources/config/config_api_schema.conf
@@ -3,10 +3,12 @@
 # For a copy, see <https://opensource.org/licenses/MIT>
 
 apiSchema {
-	# The list of environments under which the API schema is enabled.
+	# The list of environments under which the documentation API schema is enabled.
 	# If the environment is not in the list, the API schema will not be available.
-	# Empty list means 'no' API schema is available in any of the environments.
-	# Tha list can be either a single string with comma delimited values, or a list of strings.
+	# Empty list means 'no' API schema is available in any of the environments,
+	# so effectively the API schema generation is disabled, which will improve the
+	# the server startup time.
+	# Can be either a single string with semicolon delimited values, or a list of strings.
 	# Choices: DEV, TEST, STATING, PROD.
 	environments: ["DEV", "TEST"]
 	environments: ${?KCRUD_API_SCHEMA_ENVIRONMENTS}
