--- a/kcrud-base/src/main/resources/config/config_cors.conf
+++ b/kcrud-base/src/main/resources/config/config_cors.conf
@@ -4,12 +4,17 @@
 
 cors {
 	# Hosts should be in the format:
-	# 		"host|comma-delimited-schemes|optional comma-delimited-subdomains".
+	# 	"host|comma-delimited-schemes|optional comma-delimited-subdomains".
+	#
+	# When using a single string to contain all the details instead of an array,
+	# use a semilocon ';' to separate the hosts.
+	#
 	# Example:
-	# 		allowedHosts: ["example.com|http,https|api,admin", "potato.com|https|api", "somewhere.com|https|"]
+	# 	List example: ["kcrud.com|http,https|api,admin", "potato.com|https|api", "somewhere.com|https|"]
+	#	Single string example: "kcrud.com|http,https|api,admin;potato.com|https|api;somewhere.com|https|"
 	#
 	# If empty list or any of the hosts is '*', then the default is to allow all hosts,
-	# in which case schemes and subdomains are ignored even if defined, in addition any other host.
+	# in which case schemes and subdomains are ignored even if defined, in addition of any other host.
 
 	allowedHosts: ["*"]
 	allowedHosts: ${?KCRUD_CORS_ALLOWED_HOSTS}
