--- a/kcrud-base/src/main/resources/config/config_database.conf
+++ b/kcrud-base/src/main/resources/config/config_database.conf
@@ -43,9 +43,9 @@ database {
 	warnLongQueriesDurationMs: ${?KCRUD_DATABASE_WARN_LONG_QUERIES_DURATION_MS}
 
 	# The list of environments under which it is allowed to update the database schema.
-	# By default Production is not allowed to update the schema.
-	# Empty list means 'no' environments are allowed to update the schema.
-	# Tha list can be either a single string with comma delimited values, or a list of strings.
+	# Empty list means 'no' environments are allowed to update the schema, in which case
+	# the schema should had been already updated before deployment.
+	# Can be either a single string with semicolon delimited values, or a list of strings.
 	# Choices: DEV, TEST, STATING, PROD.
 	updateSchemaEnvironments: ["DEV", "TEST", "STAGING", "PROD"]
 	updateSchemaEnvironments: ${?KCRUD_DATABASE_UPDATE_SCHEMA_ENVIRONMENTS}
