--- a/kcrud-base/src/main/resources/config/config_security.conf
+++ b/kcrud-base/src/main/resources/config/config_security.conf
@@ -11,7 +11,7 @@ security {
 	# before processing any call, and the 'HSTS' plugin to add the required HTTP Strict Transport Security
 	# headers to all the requests.
 	useSecureConnection: false
-	useSecureConnection: ${?KCRUD_SECURITY_SECURE_CONNECTION}
+	useSecureConnection: ${?KCRUD_SECURITY_SECURE_CONNECTIONS}
 
 	rbac {
 		# RBAC requires JWT to be enabled and a valid JWT token in the Authorization header.
@@ -72,6 +72,7 @@ security {
 		clientSecret = ${?KCRUD_SECURITY_OAUTH_CLIENT_SECRET}
 
 		# List of OAuth scopes used by default. Provided by OAuth server vendor.
+		# Can be either a single string with semicolon delimited values, or a list of strings.
 		defaultScopes = ["openid", "profile", "email"]
 		defaultScopes = ${?KCRUD_SECURITY_OAUTH_DEFAULT_SCOPES}
 	}
