--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # Ktor:
 
 # Set to 'true' to enable development mode.
-# This make Ktor to enables features like auto-reload, better tracing, etc.,
+# This make Ktor to enables features like auto-reload, additional debug information, etc.
 # See: https://ktor.io/docs/development-mode.html
 KCRUD_KTOR_DEVELOPMENT=true
 
@@ -18,9 +18,9 @@ KCRUD_KTOR_DEPLOYMENT_HOST="0.0.0.0"
 # Set next settings to 0 for a faster shutdown / restart in development mode.
 
 # Maximum time for a server to stop accepting new requests, (ms).
-KCRUD_KTOR_DEPLOYMENT_SHUTDOWN_GRACE_PERIOD=0
+KCRUD_KTOR_DEPLOYMENT_SHUTDOWN_GRACE_PERIOD_MS=0
 # Maximum time to wait until the server stops completely. Must be >= shutdownGracePeriod, (ms).
-KCRUD_KTOR_DEPLOYMENT_SHUTDOWN_TIMEOUT=0
+KCRUD_KTOR_DEPLOYMENT_SHUTDOWN_TIMEOUT_MS=0
 
 #-------------------------------------------------------------------------------------------------
 # Runtime:
@@ -72,22 +72,21 @@ KCRUD_DATABASE_TRANSACTION_RETRY_MIN_DELAY_MS=15
 KCRUD_DATABASE_WARN_LONG_QUERIES_DURATION_MS=3000
 
 # The list of environments under which it is allowed to update the database schema.
-# By default Production is not allowed to update the schema.
-# Empty list means 'no' environments are allowed to update the schema.
-# Tha list can be either a single string with comma delimited values, or a list of strings.
+# Empty list means 'no' environments are allowed to update the schema, in which case
+# the schema should had been already updated before deployment.
 # Choices: DEV, TEST, STATING, PROD.
-KCRUD_DATABASE_WARN_LONG_QUERIES_THRESHOLD_MS="DEV,TEST,STAGING,PROD"
+KCRUD_DATABASE_UPDATE_SCHEMA_ENVIRONMENTS="DEV;TEST;STAGING;PROD"
 
 # The database file name.
 KCRUD_DATABASE_NAME="dbv1"
 
 # The database location path.
-KCRUD_DATABASE_PATH="/database/"
+KCRUD_DATABASE_PATH="./.runtime/database"
 
 # The database JDBC URL.
 # In memory: "jdbc:h2:mem:regular;DB_CLOSE_DELAY=-1;"
 # Persisent: "jdbc:h2:file:"${database.path}${database.name}
-KCRUD_DATABASE_JDBC_URL="jdbc:h2:file:/database/kcrud.db"
+KCRUD_DATABASE_JDBC_URL="jdbc:h2:file:./.runtime/database/kcrud.db"
 
 # The database JDBC driver.
 KCRUD_DATABASE_JDBC_DRIVER="org.h2.Driver"
@@ -95,12 +94,13 @@ KCRUD_DATABASE_JDBC_DRIVER="org.h2.Driver"
 #-------------------------------------------------------------------------------------------------
 # CORS:
 # Hosts should be in the format:
-# 		"host|comma-delimited-schemes|optional comma-delimited-subdomains".
-# Example:
-# 		allowedHosts: ["example.com|http,https|api,admin", "potato.com|https|api", "somewhere.com|https|"]
+# 	"host|comma-delimited-schemes|optional comma-delimited-subdomains".
+#
+# Hosts must be delimited by a semicolon ';'. Example:
+#   "kcrud.com|http,https|api,admin;potato.com|https|api;somewhere.com|https|"
 #
 # If empty list or any of the hosts is '*', then the default is to allow all hosts,
-# in which case schemes and subdomains are ignored even if defined, in addition any other host.
+# in which case schemes and subdomains are ignored even if defined, in addition of any other host.
 KCRUD_CORS_ALLOWED_HOSTS="*"
 
 #-------------------------------------------------------------------------------------------------
@@ -162,7 +162,7 @@ KCRUD_SECURITY_OAUTH_CLIENT_ID="TARGET_OAUTH_CLIENT_ID"
 KCRUD_SECURITY_OAUTH_CLIENT_SECRET="TARGET_OAUTH_CLIENT_SECRET"
 
 # List of OAuth scopes used by default. Provided by OAuth server vendor.
-KCRUD_SECURITY_OAUTH_DEFAULT_SCOPES="openid,profile,email"
+KCRUD_SECURITY_OAUTH_DEFAULT_SCOPES="openid;rofile;email"
 
 #-------------------------------------------------------------------------------------------------
 # Encryption:
@@ -209,9 +209,10 @@ KCRUD_SECURITY_CONSTRAINTS_NEW_TOKEN_REFILL_MS=10000
 
 #-------------------------------------------------------------------------------------------------
 # API SCHEMA:
-# The list of environments under which the API schema is enabled.
+# The list of environments under which the documentation API schema is enabled.
 # If the environment is not in the list, the API schema will not be available.
-# Empty list means 'no' API schema is available in any of the environments.
-# Tha list can be either a single string with comma delimited values, or a list of strings.
+# Empty list means 'no' API schema is available in any of the environments,
+# so effectively the API schema generation is disabled, which will improve the
+# the server startup time.
 # Choices: DEV, TEST, STATING, PROD.
-KCRUD_API_SCHEMA_ENVIRONMENTS="DEV,TEST"
+KCRUD_API_SCHEMA_ENVIRONMENTS="DEV;TEST"
