--- a/kcrud-server/src/main/resources/openapi/documentation.yaml
+++ b/kcrud-server/src/main/resources/openapi/documentation.yaml
@@ -1,4 +1,4 @@
-openapi: "3.0.3"
+openapi: "3.1.0"
 info:
   title: "Kcrud API"
   description: "Kcrud API"
@@ -314,26 +314,8 @@ paths:
               schema:
                 $ref: "#/components/schemas/SnowflakeData"
   /v1/employees:
-    delete:
-      description: "Delete all employees."
-      responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                type: "integer"
-                format: "int32"
-    get:
-      description: "Find all employees."
-      parameters:
-        - name: "sort"
-          in: "query"
-          required: false
-          schema:
-            type: "array"
-            items:
-              type: "string"
+    post:
+      description: "Search (Filter) employees."
       responses:
         "200":
           description: "OK"
@@ -341,15 +323,6 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/Page_? extends EmployeeEntity"
-    post:
-      description: "Create a new employee."
-      responses:
-        "201":
-          description: "Created"
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/EmployeeEntity"
   /v1/employees/{employee_id}:
     delete:
       description: "Delete an employee by ID."
@@ -845,8 +818,6 @@ components:
         connectionTimeout:
           type: "integer"
           format: "int64"
-        isolationLevel:
-          type: "string"
         transactionRetryAttempts:
           type: "integer"
           format: "int32"
@@ -858,7 +829,6 @@ components:
         jdbcUrl:
           type: "string"
       required:
-        - "isolationLevel"
         - "jdbcDriver"
         - "jdbcUrl"
     DatabaseCheck:
@@ -1094,6 +1064,7 @@ components:
           enum:
             - "ONBOARDING"
             - "ACTIVE"
+            - "IDLE"
             - "TERMINATED"
         probationEndDate:
           $ref: "#/components/schemas/LocalDate"
