--- a/kcrud-base/src/main/resources/config/config_runtime.conf
+++ b/kcrud-base/src/main/resources/config/config_runtime.conf
@@ -16,7 +16,7 @@ runtime {
 
 	# DoubleReceive is a feature that allows to receive the same request more than once.
 	# This is useful for debugging and testing.
-	# See: https://ktor.io/docs/double-receive.html
+	# See: https://ktor.io/docs/server-double-receive.html
 	doubleReceive: true
 	doubleReceive: ${?KCRUD_RUNTIME_DOUBLE_RECEIVE}
 
