Updated exposed to 0.50.0

--- a/kcrud-base/src/main/resources/config/config_database.conf
+++ b/kcrud-base/src/main/resources/config/config_database.conf
@@ -21,14 +21,14 @@ database {
 	# How many retries will be made inside any transaction block if a SQLException happens.
 	# This can be overridden on a per-transaction level by specifying the 'repetitionAttempts'
 	# property in a transaction block.
-	transactionRetryAttempts: 3
-	transactionRetryAttempts: ${?KCRUD_DATABASE_TRANSACTION_RETRY_ATTEMPTS}
+	transactionMaxAttempts: 3
+	transactionMaxAttempts: ${?KCRUD_DATABASE_TRANSACTION_MAX_ATTEMPTS}
 
 	# The minimum delay between transaction retries if a SQLException happens, (ms).
 	# This can be overridden on a per-transaction level by setting the 'minRepetitionDelay'
 	# property in a transaction block.
-	transactionRetryMinDelayMs: 15 # 15 milliseconds.
-	transactionRetryMinDelayMs: ${?KCRUD_DATABASE_TRANSACTION_RETRY_MIN_DELAY_MS}
+	transactionMinRetryDelayMs: 15 # 15 milliseconds.
+	transactionMinRetryDelayMs: ${?KCRUD_DATABASE_TRANSACTION_MIN_RETRY_DELAY_MS}
 
 	# Threshold to log queries which exceed the threshold with WARN level, (ms).
 	# This can be overridden on a per-transaction level by setting the 'warnLongQueriesDuration'
