Configure double-receive plugin by environment

--- a/kcrud-base/src/main/resources/config/config_runtime.conf
+++ b/kcrud-base/src/main/resources/config/config_runtime.conf
@@ -15,8 +15,9 @@ runtime {
 	# DoubleReceive is a feature that allows to receive the same request more than once.
 	# This is useful for debugging and testing.
 	# See: https://ktor.io/docs/server-double-receive.html
-	doubleReceive: true
-	doubleReceive: ${?KCRUD_RUNTIME_DOUBLE_RECEIVE}
+	# Choices: DEV, TEST, STATING, PROD.
+	doubleReceiveEnvironments: ["DEV", "TEST"]
+	doubleReceiveEnvironments: ${?KCRUD_RUNTIME_DOUBLE_RECEIVE_ENVIRONMENTS}
 
 	# Temporary project folder where to output runtime files such as the database, etc.
 	workingDir: "./.runtime"
