--- a/.env
+++ b/.env
@@ -37,7 +37,8 @@ KCRUD_RUNTIME_ENVIRONMENT="DEV"
 # DoubleReceive is a feature that allows to receive the same request more than once.
 # This is useful for debugging and testing.
 # See: https://ktor.io/docs/server-double-receive.html
-KCRUD_RUNTIME_DOUBLE_RECEIVE=true
+# Choices: DEV, TEST, STAGING, PROD.
+KCRUD_RUNTIME_DOUBLE_RECEIVE_ENVIRONMENTS="DEV;TEST"
 
 #-------------------------------------------------------------------------------------------------
 # Database:
