Renamed main configuration

--- a/kcrud-server/src/main/resources/application.conf
+++ b/kcrud-server/src/main/resources/application.conf
@@ -4,7 +4,7 @@
 # https://ktor.io/docs/server-configuration-file.html
 # https://ktor.io/docs/server-configuration-file.html#predefined-properties
 
-include "config/config_application.conf"
+include "config/config.conf"
 
 ktor {
 
