Updated quartz configuration

--- a/kcrud-base/src/main/resources/quartz.properties
+++ b/kcrud-base/src/main/resources/quartz.properties
@@ -5,12 +5,15 @@
 # suppress inspection "WrongPropertyKeyValueDelimiter" for whole file
 #
 # https://www.quartz-scheduler.org/documentation/2.4.0-SNAPSHOT/configuration.html
+# https://documentation.softwareag.com/onlinehelp/Rohan/quartz_223/2-2-3_Quartz_Scheduler_Configuration_Guide.pdf
 #
 #============================================================================
 # Configure Main Scheduler Properties
 #============================================================================
 org.quartz.scheduler.instanceName:KcrudScheduler
 org.quartz.scheduler.instanceId:AUTO
+org.quartz.scheduler.skipUpdateCheck:true
+org.quartz.scheduler.threadsInheritContextClassLoaderOfInitializer:true
 #============================================================================
 # Configure ThreadPool
 #============================================================================
@@ -22,13 +25,10 @@ org.quartz.threadPool.threadsInheritContextClassLoaderOfInitializingThread:true
 # Configure JobStore
 #============================================================================
 org.quartz.dataSource.kcrudDatabase.provider:hikaricp
-org.quartz.jobStore.misfireThreshold:60000
+org.quartz.jobStore.misfireThreshold:30000
 org.quartz.jobStore.class:org.quartz.impl.jdbcjobstore.JobStoreTX
 org.quartz.jobStore.isClustered:true
 org.quartz.jobStore.clusterCheckinInterval=20000
 org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
 org.quartz.jobStore.dataSource:kcrudDatabase
 org.quartz.jobStore.tablePrefix:QRTZ_
-
-
-
